Accept direct sun.misc.Unsafe memory access flag